# p2p-messaging

./: .gitignore  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: api_structs.rs  httpbin.rs  main.rs  p2p.rs
src/messaging/: ChatPage.tsx
